<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.parallels.pa.rnd.jpa</groupId>
  <artifactId>jpatutorial</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>jpatutorial</name>
  <url>http://maven.apache.org</url>
	
	<build>
		<finalName>${project.artifactId}</finalName>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
        		<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>
        		<configuration>
					<forkCount>0</forkCount>
					<!-- <argLine>-Xmx32m -Xms32m -Xloggc:gc.log -XX:+PrintGCDetails</argLine> -->
          			<parallel>suites</parallel>
					<perCoreThreadCount>false</perCoreThreadCount>
					<threadCount>1</threadCount>
					<!-- <threadCountClasses>1</threadCountClasses> -->
          			<includes>
          				<include>**/ScrapTest.java</include>
          			</includes>
        		</configuration>
      		</plugin>
		</plugins>
	</build>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
<!--
	  <dependency>
		<groupId>javax.validation</groupId>
		<artifactId>validation-api</artifactId>
		<version>1.1.0.Final</version>
	  </dependency>
-->
	<dependency>
	  <groupId>org.jboss.spec.javax.xml.bind</groupId>
	  <artifactId>jboss-jaxb-api_2.3_spec</artifactId>
	  <version>1.0.1.Final</version>
	</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
			<version>5.3.9.Final</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-ehcache</artifactId>
			<version>5.3.9.Final</version>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>1.3.173</version>
		</dependency>
		<dependency>
    		<groupId>org.postgresql</groupId>
    		<artifactId>postgresql</artifactId>
    		<version>9.2-1004-jdbc4</version>
		</dependency>
    	<dependency>
    		<groupId>junit</groupId>
    		<artifactId>junit</artifactId>
    		<version>4.11</version>
    		<scope>test</scope>
  		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.11.1</version>
		</dependency>
	</dependencies>
</project>
